# testgen

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: PaymentService.java  payment_service.py
testgen/: cli.py  detector.py  models.py
testgen/generator/: llm_client.py  prompt_builder.py
testgen/output/: writer.py
testgen/parser/: base.py  java_parser.py  python_parser.py
tests/: test_detector.py  test_java_parser.py  test_python_parser.py
tests/fixtures/: SampleService.java  sample.py
