[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testgen-ai"
version = "0.1.0"
description = "Agentic unit test generator for Java and Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "javalang>=0.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
testgen = "testgen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["testgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
